add edit user and change password
