# config/routes/auth.js
@@ -9,7 +9,9 @@ const isAdmin = require("../../middlewares/isAdmin");
 
 // API auth
 router.get("/user", Authentication, isAdmin, auth.user);
+router.put("/editUser/:id", Authentication, isAdmin, auth.editUser);
 router.post("/register", Authentication, isAdmin, auth.register);
 router.post("/login", auth.login);
+router.put("/changePassword", Authentication, auth.changePassword);
 
 module.exports = router;
